--- a/SampleMavenWeb/pom.xml
+++ b/SampleMavenWeb/pom.xml
@@ -30,6 +30,7 @@
 			<plugin>
  				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>3.0.0</version>
  				<configuration>
 					<url>http://127.0.0.1:8080/manager/text</url>
 					<server>TomcatServer</server>
@@ -50,4 +51,7 @@
 
 		</plugins>
 	</build>
+	<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
