--- a/SampleMavenWeb/pom.xml
+++ b/SampleMavenWeb/pom.xml
@@ -32,7 +32,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<version>1.1</version>
  				<configuration>
-					<url>http://127.0.0.1:8080/manager/text</url>
+					<url>http://localhost:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<path>/SampleMavenWeb</path>
 				</configuration>
