--- a/GcmsOnline/pom.xml
+++ b/GcmsOnline/pom.xml
@@ -241,6 +241,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+ 				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+ 				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>TomcatServer</server>
+					<path>/GcmsOnline</path>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
